--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,17 @@ language: node_js
 
 node_js:
   - "0.10"
-  
-notifications:
-  webhooks:
-    urls:
-      - YOUR_WEBHOOK_URL
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: false     # default: false
+
+before_script:
+  - npm install
+  - npm install -g gulp
+script: gulp
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  local_dir: dist
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  on:
+    branch: master
+  target_branch: gh-pages
