--- a/src/data/toolkit.yml
+++ b/src/data/toolkit.yml
@@ -1,8 +1,10 @@
 colors:
   primary:
-    Dark: "rgb(30, 30, 30)"
-    Light: "rgb(242, 242, 242)"
+    Primary: "#219633"
+    Accent: "#F5F5F5"
+    Text: "#333333"
   secondary:
-    Red: "rgb(201, 55, 6)"
-    Yellow: "rgb(252, 207, 80)"
-    Blue: "rgb(39, 102, 143)"
+    Success: "#31D843"
+    Info: "#3DD6D0"
+    Warning: "#F9A03F"
+    Danger: "#D66853"
