--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 
 node_js:
-  - "8.1.3"
+  - "0.10"
 
+before_script:
+  - npm install
+  - npm install -g gulp
 script: gulp
 
 deploy:
