--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "url": "https://github.com/fbrctr/fabricator.git"
   },
   "engines": {
-    "node": ">=8.1.3",
-    "npm": ">=5.0.3"
+    "node": ">=0.10.0",
+    "npm": ">=2.0.0"
   },
   "devDependencies": {
     "babel-core": "^5.2.17",
@@ -36,7 +36,7 @@
     "del": "^1.1.1",
     "fabricator-assemble": "^1.1.3",
     "gulp": "^3.8.11",
-    "gulp-autoprefixer": "4.0.0",
+    "gulp-autoprefixer": "^2.2.0",
     "gulp-csso": "^1.0.0",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
