--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "url": "https://github.com/fbrctr/fabricator.git"
   },
   "engines": {
-    "node": ">=0.10.0",
-    "npm": ">=2.0.0"
+    "node": "8.1.3",
+    "npm": "4.1.2"
   },
   "devDependencies": {
     "babel-core": "^5.2.17",
