--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "gulp-sass": "^2.0.0",
     "gulp-util": "^3.0.4",
     "imports-loader": "^0.6.3",
+    "moment": "^2.18.1",
     "run-sequence": "^1.0.2",
     "script-loader": "^0.6.1",
-    "webpack": "^1.8.11"
+    "webpack": "^1.8.11",
+    "x-editable": "^1.5.1"
   }
 }
